Sesiones, cambios api
